Compilers_Principles/experiment13/python_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> expr
Rule 6     statement -> print
Rule 7     statement -> if
Rule 8     statement -> while
Rule 9     statement -> for
Rule 10    statement -> break
Rule 11    statement -> function
Rule 12    statement -> class
Rule 13    statement -> return
Rule 14    assignment -> variable ASSIGN expr
Rule 15    assignment -> variable MINEQUAL expr
Rule 16    assignment -> variable PLUSEQUAL expr
Rule 17    assignment -> variable DPLUS
Rule 18    assignment -> variable DMINUS
Rule 19    variable -> variable LBRACKET expr RBRACKET
Rule 20    variable -> ID DOT ID
Rule 21    variable -> ID
Rule 22    expr -> expr PLUS term
Rule 23    expr -> expr MINUS term
Rule 24    expr -> term
Rule 25    expr -> string
Rule 26    expr -> array
Rule 27    term -> term TIMES factor
Rule 28    term -> term DIVIDE factor
Rule 29    term -> term EDIVIDE factor
Rule 30    term -> factor
Rule 31    factor -> variable
Rule 32    factor -> NUMBER
Rule 33    factor -> len
Rule 34    factor -> call
Rule 35    factor -> LPAREN expr RPAREN
Rule 36    exprs -> exprs COMMA expr
Rule 37    exprs -> expr
Rule 38    len -> LEN LPAREN variable RPAREN
Rule 39    print -> PRINT LPAREN exprs RPAREN
Rule 40    print -> PRINT LPAREN RPAREN
Rule 41    array -> LBRACKET exprs RBRACKET
Rule 42    array -> LBRACKET RBRACKET
Rule 43    condition -> condition OR join
Rule 44    condition -> join
Rule 45    join -> join AND equality
Rule 46    join -> equality
Rule 47    equality -> equality EQ rel
Rule 48    equality -> equality NE rel
Rule 49    equality -> rel
Rule 50    rel -> expr LT expr
Rule 51    rel -> expr LE expr
Rule 52    rel -> expr GT expr
Rule 53    rel -> expr GE expr
Rule 54    rel -> expr
Rule 55    if -> IF LPAREN condition RPAREN LBRACE statements RBRACE
Rule 56    if -> IF LPAREN condition RPAREN LBRACE statements RBRACE else
Rule 57    else -> ELIF LPAREN condition RPAREN LBRACE statements RBRACE
Rule 58    else -> ELIF LPAREN condition RPAREN LBRACE statements RBRACE else
Rule 59    else -> ELSE LBRACE statements RBRACE
Rule 60    while -> WHILE LPAREN condition RPAREN LBRACE statements RBRACE
Rule 61    for -> FOR LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
Rule 62    break -> BREAK
Rule 63    function -> DEF ID LPAREN args RPAREN LBRACE statements RBRACE
Rule 64    function -> DEF ID LPAREN RPAREN LBRACE statements RBRACE
Rule 65    args -> args COMMA ID
Rule 66    args -> ID
Rule 67    call -> ID LPAREN exprs RPAREN
Rule 68    call -> ID LPAREN RPAREN
Rule 69    call -> ID DOT ID LPAREN exprs RPAREN
Rule 70    call -> ID DOT ID LPAREN RPAREN
Rule 71    return -> RETURN
Rule 72    return -> RETURN exprs
Rule 73    class -> CLASS ID LBRACE functions RBRACE
Rule 74    functions -> functions function
Rule 75    functions -> function
Rule 76    string -> STRING

Terminals, with rules where they appear

AND                  : 45
ASSIGN               : 14
BREAK                : 62
CLASS                : 73
COMMA                : 36 65
DEF                  : 63 64
DIVIDE               : 28
DMINUS               : 18
DOT                  : 20 69 70
DPLUS                : 17
EDIVIDE              : 29
ELIF                 : 57 58
ELSE                 : 59
EQ                   : 47
FOR                  : 61
GE                   : 53
GT                   : 52
ID                   : 20 20 21 63 64 65 66 67 68 69 69 70 70 73
IF                   : 55 56
LBRACE               : 55 56 57 58 59 60 61 63 64 73
LBRACKET             : 19 41 42
LE                   : 51
LEN                  : 38
LPAREN               : 35 38 39 40 55 56 57 58 60 61 63 64 67 68 69 70
LT                   : 50
MINEQUAL             : 15
MINUS                : 23
NE                   : 48
NUMBER               : 32
OR                   : 43
PLUS                 : 22
PLUSEQUAL            : 16
PRINT                : 39 40
RBRACE               : 55 56 57 58 59 60 61 63 64 73
RBRACKET             : 19 41 42
RETURN               : 71 72
RPAREN               : 35 38 39 40 55 56 57 58 60 61 63 64 67 68 69 70
SEMICOLON            : 61 61
STRING               : 76
TIMES                : 27
WHILE                : 60
error                : 

Nonterminals, with rules where they appear

args                 : 63 65
array                : 26
assignment           : 4 61 61
break                : 10
call                 : 34
class                : 12
condition            : 43 55 56 57 58 60 61
else                 : 56 58
equality             : 45 46 47 48
expr                 : 5 14 15 16 19 22 23 35 36 37 50 50 51 51 52 52 53 53 54
exprs                : 36 39 41 67 69 72
factor               : 27 28 29 30
for                  : 9
function             : 11 74 75
functions            : 73 74
if                   : 7
join                 : 43 44 45
len                  : 33
print                : 6
program              : 0
rel                  : 47 48 49
return               : 13
statement            : 2 3
statements           : 1 2 55 56 57 58 59 60 61 63 64
string               : 25
term                 : 22 23 24 27 28 29
variable             : 14 15 16 17 18 19 31 38
while                : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . expr
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . while
    (9) statement -> . for
    (10) statement -> . break
    (11) statement -> . function
    (12) statement -> . class
    (13) statement -> . return
    (14) assignment -> . variable ASSIGN expr
    (15) assignment -> . variable MINEQUAL expr
    (16) assignment -> . variable PLUSEQUAL expr
    (17) assignment -> . variable DPLUS
    (18) assignment -> . variable DMINUS
    (22) expr -> . expr PLUS term
    (23) expr -> . expr MINUS term
    (24) expr -> . term
    (25) expr -> . string
    (26) expr -> . array
    (39) print -> . PRINT LPAREN exprs RPAREN
    (40) print -> . PRINT LPAREN RPAREN
    (55) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE
    (56) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else
    (60) while -> . WHILE LPAREN condition RPAREN LBRACE statements RBRACE
    (61) for -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (62) break -> . BREAK
    (63) function -> . DEF ID LPAREN args RPAREN LBRACE statements RBRACE
    (64) function -> . DEF ID LPAREN RPAREN LBRACE statements RBRACE
    (73) class -> . CLASS ID LBRACE functions RBRACE
    (71) return -> . RETURN
    (72) return -> . RETURN exprs
    (19) variable -> . variable LBRACKET expr RBRACKET
    (20) variable -> . ID DOT ID
    (21) variable -> . ID
    (27) term -> . term TIMES factor
    (28) term -> . term DIVIDE factor
    (29) term -> . term EDIVIDE factor
    (30) term -> . factor
    (76) string -> . STRING
    (41) array -> . LBRACKET exprs RBRACKET
    (42) array -> . LBRACKET RBRACKET
    (31) factor -> . variable
    (32) factor -> . NUMBER
    (33) factor -> . len
    (34) factor -> . call
    (35) factor -> . LPAREN expr RPAREN
    (38) len -> . LEN LPAREN variable RPAREN
    (67) call -> . ID LPAREN exprs RPAREN
    (68) call -> . ID LPAREN RPAREN
    (69) call -> . ID DOT ID LPAREN exprs RPAREN
    (70) call -> . ID DOT ID LPAREN RPAREN

    PRINT           shift and go to state 18
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    BREAK           shift and go to state 23
    DEF             shift and go to state 24
    CLASS           shift and go to state 26
    RETURN          shift and go to state 27
    ID              shift and go to state 25
    STRING          shift and go to state 30
    LBRACKET        shift and go to state 28
    NUMBER          shift and go to state 31
    LPAREN          shift and go to state 19
    LEN             shift and go to state 34

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    expr                           shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    break                          shift and go to state 10
    function                       shift and go to state 11
    class                          shift and go to state 12
    return                         shift and go to state 13
    variable                       shift and go to state 14
    term                           shift and go to state 15
    string                         shift and go to state 16
    array                          shift and go to state 17
    factor                         shift and go to state 29
    len                            shift and go to state 32
    call                           shift and go to state 33

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . expr
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . while
    (9) statement -> . for
    (10) statement -> . break
    (11) statement -> . function
    (12) statement -> . class
    (13) statement -> . return
    (14) assignment -> . variable ASSIGN expr
    (15) assignment -> . variable MINEQUAL expr
    (16) assignment -> . variable PLUSEQUAL expr
    (17) assignment -> . variable DPLUS
    (18) assignment -> . variable DMINUS
    (22) expr -> . expr PLUS term
    (23) expr -> . expr MINUS term
    (24) expr -> . term
    (25) expr -> . string
    (26) expr -> . array
    (39) print -> . PRINT LPAREN exprs RPAREN
    (40) print -> . PRINT LPAREN RPAREN
    (55) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE
    (56) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else
    (60) while -> . WHILE LPAREN condition RPAREN LBRACE statements RBRACE
    (61) for -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (62) break -> . BREAK
    (63) function -> . DEF ID LPAREN args RPAREN LBRACE statements RBRACE
    (64) function -> . DEF ID LPAREN RPAREN LBRACE statements RBRACE
    (73) class -> . CLASS ID LBRACE functions RBRACE
    (71) return -> . RETURN
    (72) return -> . RETURN exprs
    (19) variable -> . variable LBRACKET expr RBRACKET
    (20) variable -> . ID DOT ID
    (21) variable -> . ID
    (27) term -> . term TIMES factor
    (28) term -> . term DIVIDE factor
    (29) term -> . term EDIVIDE factor
    (30) term -> . factor
    (76) string -> . STRING
    (41) array -> . LBRACKET exprs RBRACKET
    (42) array -> . LBRACKET RBRACKET
    (31) factor -> . variable
    (32) factor -> . NUMBER
    (33) factor -> . len
    (34) factor -> . call
    (35) factor -> . LPAREN expr RPAREN
    (38) len -> . LEN LPAREN variable RPAREN
    (67) call -> . ID LPAREN exprs RPAREN
    (68) call -> . ID LPAREN RPAREN
    (69) call -> . ID DOT ID LPAREN exprs RPAREN
    (70) call -> . ID DOT ID LPAREN RPAREN

    $end            reduce using rule 1 (program -> statements .)
    PRINT           shift and go to state 18
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    BREAK           shift and go to state 23
    DEF             shift and go to state 24
    CLASS           shift and go to state 26
    RETURN          shift and go to state 27
    ID              shift and go to state 25
    STRING          shift and go to state 30
    LBRACKET        shift and go to state 28
    NUMBER          shift and go to state 31
    LPAREN          shift and go to state 19
    LEN             shift and go to state 34

    statement                      shift and go to state 35
    assignment                     shift and go to state 4
    expr                           shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    break                          shift and go to state 10
    function                       shift and go to state 11
    class                          shift and go to state 12
    return                         shift and go to state 13
    variable                       shift and go to state 14
    term                           shift and go to state 15
    string                         shift and go to state 16
    array                          shift and go to state 17
    factor                         shift and go to state 29
    len                            shift and go to state 32
    call                           shift and go to state 33

state 3

    (3) statements -> statement .

    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    CLASS           reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    LBRACKET        reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    LEN             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    CLASS           reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    ID              reduce using rule 4 (statement -> assignment .)
    STRING          reduce using rule 4 (statement -> assignment .)
    LBRACKET        reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    LPAREN          reduce using rule 4 (statement -> assignment .)
    LEN             reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> expr .
    (22) expr -> expr . PLUS term
    (23) expr -> expr . MINUS term

    PRINT           reduce using rule 5 (statement -> expr .)
    IF              reduce using rule 5 (statement -> expr .)
    WHILE           reduce using rule 5 (statement -> expr .)
    FOR             reduce using rule 5 (statement -> expr .)
    BREAK           reduce using rule 5 (statement -> expr .)
    DEF             reduce using rule 5 (statement -> expr .)
    CLASS           reduce using rule 5 (statement -> expr .)
    RETURN          reduce using rule 5 (statement -> expr .)
    ID              reduce using rule 5 (statement -> expr .)
    STRING          reduce using rule 5 (statement -> expr .)
    LBRACKET        reduce using rule 5 (statement -> expr .)
    NUMBER          reduce using rule 5 (statement -> expr .)
    LPAREN          reduce using rule 5 (statement -> expr .)
    LEN             reduce using rule 5 (statement -> expr .)
    $end            reduce using rule 5 (statement -> expr .)
    RBRACE          reduce using rule 5 (statement -> expr .)
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37


state 6

    (6) statement -> print .

    PRINT           reduce using rule 6 (statement -> print .)
    IF              reduce using rule 6 (statement -> print .)
    WHILE           reduce using rule 6 (statement -> print .)
    FOR             reduce using rule 6 (statement -> print .)
    BREAK           reduce using rule 6 (statement -> print .)
    DEF             reduce using rule 6 (statement -> print .)
    CLASS           reduce using rule 6 (statement -> print .)
    RETURN          reduce using rule 6 (statement -> print .)
    ID              reduce using rule 6 (statement -> print .)
    STRING          reduce using rule 6 (statement -> print .)
    LBRACKET        reduce using rule 6 (statement -> print .)
    NUMBER          reduce using rule 6 (statement -> print .)
    LPAREN          reduce using rule 6 (statement -> print .)
    LEN             reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)
    RBRACE          reduce using rule 6 (statement -> print .)


state 7

    (7) statement -> if .

    PRINT           reduce using rule 7 (statement -> if .)
    IF              reduce using rule 7 (statement -> if .)
    WHILE           reduce using rule 7 (statement -> if .)
    FOR             reduce using rule 7 (statement -> if .)
    BREAK           reduce using rule 7 (statement -> if .)
    DEF             reduce using rule 7 (statement -> if .)
    CLASS           reduce using rule 7 (statement -> if .)
    RETURN          reduce using rule 7 (statement -> if .)
    ID              reduce using rule 7 (statement -> if .)
    STRING          reduce using rule 7 (statement -> if .)
    LBRACKET        reduce using rule 7 (statement -> if .)
    NUMBER          reduce using rule 7 (statement -> if .)
    LPAREN          reduce using rule 7 (statement -> if .)
    LEN             reduce using rule 7 (statement -> if .)
    $end            reduce using rule 7 (statement -> if .)
    RBRACE          reduce using rule 7 (statement -> if .)


state 8

    (8) statement -> while .

    PRINT           reduce using rule 8 (statement -> while .)
    IF              reduce using rule 8 (statement -> while .)
    WHILE           reduce using rule 8 (statement -> while .)
    FOR             reduce using rule 8 (statement -> while .)
    BREAK           reduce using rule 8 (statement -> while .)
    DEF             reduce using rule 8 (statement -> while .)
    CLASS           reduce using rule 8 (statement -> while .)
    RETURN          reduce using rule 8 (statement -> while .)
    ID              reduce using rule 8 (statement -> while .)
    STRING          reduce using rule 8 (statement -> while .)
    LBRACKET        reduce using rule 8 (statement -> while .)
    NUMBER          reduce using rule 8 (statement -> while .)
    LPAREN          reduce using rule 8 (statement -> while .)
    LEN             reduce using rule 8 (statement -> while .)
    $end            reduce using rule 8 (statement -> while .)
    RBRACE          reduce using rule 8 (statement -> while .)


state 9

    (9) statement -> for .

    PRINT           reduce using rule 9 (statement -> for .)
    IF              reduce using rule 9 (statement -> for .)
    WHILE           reduce using rule 9 (statement -> for .)
    FOR             reduce using rule 9 (statement -> for .)
    BREAK           reduce using rule 9 (statement -> for .)
    DEF             reduce using rule 9 (statement -> for .)
    CLASS           reduce using rule 9 (statement -> for .)
    RETURN          reduce using rule 9 (statement -> for .)
    ID              reduce using rule 9 (statement -> for .)
    STRING          reduce using rule 9 (statement -> for .)
    LBRACKET        reduce using rule 9 (statement -> for .)
    NUMBER          reduce using rule 9 (statement -> for .)
    LPAREN          reduce using rule 9 (statement -> for .)
    LEN             reduce using rule 9 (statement -> for .)
    $end            reduce using rule 9 (statement -> for .)
    RBRACE          reduce using rule 9 (statement -> for .)


state 10

    (10) statement -> break .
